crates/playwright-rs-macros/tests/ui/unmatched_closer.stderr
error: unmatched closing `)`
 --> tests/ui/unmatched_closer.rs:4:22
  |
4 |     let _ = locator!("button)");
  |                      ^^^^^^^^^
